--- a/html-css/module-03/hw-03/css/style.css
+++ b/html-css/module-03/hw-03/css/style.css
@@ -63,15 +63,20 @@ body {
 .main li {
   list-style: none;
   display: inline-block;
+  float: left;
   width: 420px;
-  margin-right: 15px;
   margin-bottom: 50px;
   }
 
 .right {
   margin-right: 0;
+  margin-left: 20px;
 }
 
+.right {
+  margin-right: 0;
+  margin-left: 0;
+}
 .category {
   margin-top: 30px;
   font-family: Ubuntu, sans-serif;
