--- a/html-css/module-03/hw-03/css/style.css
+++ b/html-css/module-03/hw-03/css/style.css
@@ -1,116 +1,130 @@
-
 body {
-    font-family: Playfair Display, serif;
-    color: #626262;
-    }
-  
-  .wrapper {
-    width: 900px;
-    margin: 0 auto;
-    padding-top: 44px;
-    
-    }
-  
-  .page-header {
-    margin-bottom: 70px;
-  }
-  
-  .site-navigation {
-   list-style-type: none;
-   text-align: center;
-   padding: 0;
-   font-size: 0;
-   }
-  
-  
-  .site-navigation li{
-    display: inline-block;
-      }
-  
-  .site-navigation a {
-    font-size: 14px;
-    display: block;
-    padding: 28px;
-    color: #626262;
-    text-decoration: none;
-    text-transform: uppercase;
-  }
-  
-  .site-navigation a:hover {
-    color: #03a9f4;
-  }
-  
-  .site-navigation a:focus {
-    color: #03a9f4;
-  }
-  
-  .main-content {
-    font-size: 0;
+  margin: 0;
+  font-family: Playfair Display, serif;
+  color: #626262;
+}
+
+.wrapper {
+  width: 900px;
+  margin: 0 auto;
+  padding-top: 44px;
+}
+
+.page-header {
+  margin-bottom: 70px;
+}
+
+.site-navigation {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+  font-size: 0;
+}
+
+.site-navigation li {
+  display: inline-block;
+}
+
+.site-navigation a {
+  font-size: 14px;
+  display: block;
+  padding: 28px;
+  color: #626262;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.site-navigation a:hover {
+  color: #03a9f4;
+}
+
+.site-navigation a:focus {
+  color: #03a9f4;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border:0;
     padding: 0;
-    margin: 0;
-      }
-  
-  
-  .main-content li {
-    list-style: none;
-    display: inline-block;
-    width: 420px;
-    margin-bottom: 135px;
-    margin-right: 60px;
-         }
-  
-  .main-content li:nth-child(2n) {
-    margin-right: 0;
-  }
+    white-space:nowrap;
+    clip-path:inset(100%);
+    clip: rect(0 0 0 0);
+    overflow:hidden;
+}
 
-  .main-content li:nth-last-child(-n+2) {
-    margin-bottom: 60px;
-  }
-  
-  
-  .article-img {
-    margin-bottom: 30px;
-  }
-  
-  .category {
-    font-family: Ubuntu, sans-serif;
-    color: #b4ad9e;
-    font-size: 14px;
-    text-align: left;
-    text-transform: uppercase;
-    margin-bottom: 30px;
-  }
-  
-  .news-header {
-    font-size: 30px;
-    margin-bottom: 35px;
-    font-weight: 300;
-  }
 
-     
-  .news {
-   font-size: 14px;
-    
-  }
-  
-  .button-load-more {
-    display: block;
-    width: 160px;
-    height: 60px;
-    margin: 0 auto;
-    font-family: Playfair Display, serif;
-    color: #626262;
-    font-size: 20px;
-    text-align: center;
-    border: 1px solid #626262;
-    background: white;
-    cursor: pointer;
-    outline:none;
-    transition-duration: 0.2s;
-    margin-bottom: 70px;
-    }
-  
-  .button-load-more:hover {
-   color: #03a9f4;
-   border: 1px solid #03a9f4;
-      }
+.main-content {
+  font-size: 0;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 60px;
+}
+
+.main-content li {
+  list-style: none;
+  display: inline-block;
+  width: 420px;
+  margin-bottom: 135px;
+  margin-right: 60px;
+}
+
+.main-content li:nth-child(2n) {
+  margin-right: 0;
+}
+
+.main-content li:nth-last-child(-n + 2) {
+  margin-bottom: 0;
+}
+
+.article-img {
+  margin-bottom: 30px;
+}
+
+.category {
+  margin: 0;
+  font-family: Ubuntu, sans-serif;
+  color: #b4ad9e;
+  font-size: 14px;
+  text-align: left;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.news-header {
+  margin: 0;
+  font-size: 30px;
+  margin-bottom: 35px;
+  font-weight: 300;
+}
+
+.news {
+  margin: 0;
+  font-size: 14px;
+}
+
+.button-load-more {
+  display: block;
+  padding: 20px 30px;
+  margin: 0 auto;
+  font-family: Playfair Display, serif;
+  text-decoration: none;
+  color: #626262;
+  font-size: 20px;
+  text-align: center;
+  border: 1px solid #626262;
+  background: white;
+  cursor: pointer;
+  outline: none;
+  transition-duration: 0.2s;
+  margin: 0 370px 70px;
+}
+
+.button-load-more:hover {
+  color: #03a9f4;
+  border: 1px solid #03a9f4;
+}
