--- a/html-css/module-03/hw-03/css/style.css
+++ b/html-css/module-03/hw-03/css/style.css
@@ -8,6 +8,7 @@ body {
   width: 900px;
   margin: 0 auto;
   padding-top: 44px;
+  padding-bottom: 70px;
 }
 
 .page-header {
@@ -44,19 +45,18 @@ body {
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border:0;
-    padding: 0;
-    white-space:nowrap;
-    clip-path:inset(100%);
-    clip: rect(0 0 0 0);
-    overflow:hidden;
+input[type="radio"].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
-
 
 .main-content {
   font-size: 0;
@@ -112,7 +112,6 @@ input[type="radio"].visually-hidden{
   padding: 20px 30px;
   margin: 0 auto;
   font-family: Playfair Display, serif;
-  text-decoration: none;
   color: #626262;
   font-size: 20px;
   text-align: center;
@@ -121,7 +120,6 @@ input[type="radio"].visually-hidden{
   cursor: pointer;
   outline: none;
   transition-duration: 0.2s;
-  margin: 0 370px 70px;
 }
 
 .button-load-more:hover {
