--- a/html-css/module-04/hw-04/css/style.css
+++ b/html-css/module-04/hw-04/css/style.css
@@ -54,6 +54,7 @@ input[type="radio"].visually-hidden {
 
 .logo {
   font-size: 30px;
+  font-weight: 300;
   text-transform: uppercase;
   text-decoration: none;
   color: #555252;
@@ -63,6 +64,7 @@ input[type="radio"].visually-hidden {
 
 .logo::first-letter {
   color: #1abc9c;
+  font-weight: 900;
 }
 
 .site-navigation-list {
@@ -81,6 +83,7 @@ input[type="radio"].visually-hidden {
   font-family: "Open Sans", sans-serif;
   padding: 5px 15px;
   font-size: 14px;
+  font-weight: 700;
   text-align: right;
   text-transform: uppercase;
   text-decoration: none;
@@ -111,6 +114,7 @@ input[type="radio"].visually-hidden {
 .section-header {
   margin: 0 auto;
   font-size: 48px;
+  font-weight: 900;
   line-height: 48px;
   text-align: center;
   text-transform: uppercase;
@@ -172,6 +176,7 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 13.5px 12px;
   font-size: 18px;
+  font-weight: 900;
   color: #ffffff;
 }
 
@@ -209,6 +214,7 @@ input[type="radio"].visually-hidden {
   margin-bottom: 29px;
   font-family: "Open Sans", sans-serif;
   font-size: 18px;
+  font-weight: 600;
   text-align: left;
   line-height: 29px;
   color: #555252;
@@ -228,6 +234,7 @@ input[type="radio"].visually-hidden {
   margin-bottom: 15px;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
+  font-weight: 400;
   line-height: 26px;
   text-align: left;
 }
@@ -241,6 +248,7 @@ input[type="radio"].visually-hidden {
   background-color: #4ec6ab;
   font-family: "Open Sans", sans-serif;
   font-size: 15.9px;
+  font-weight: 300;
   text-align: center;
   text-decoration: none;
   color: #ffffff;
