--- a/html-css/module-05/hw-05/css/style.css
+++ b/html-css/module-05/hw-05/css/style.css
@@ -320,6 +320,7 @@ input[type="radio"].visually-hidden {
 
 .icon:last-child a {
   width: 166px;
+  background-color: #323232;
 }
 
 .icon a span {
