--- a/html-css/module-06/hw-06/css/style.css
+++ b/html-css/module-06/hw-06/css/style.css
@@ -114,31 +114,34 @@ span {
 /* SERVICES */
 
 .services {
+  padding-bottom: 90px;
+}
+
+.section-header {
   margin-bottom: 90px;
 }
 
-.pre-header,
-.section-header {
+.pre-title,
+.section-title {
   margin: 0 auto;
   color: #333333;
   text-align: center;
 }
 
-.pre-header {
+.pre-title {
   font-family: "Kaushan Script", cursive;
   font-size: 24px;
   font-weight: 400;
   margin-bottom: 22px;
 }
 
-.section-header {
+.section-title {
   font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 90px;
 }
 
-.section-header::after {
+.section-title::after {
   display: block;
   content: "";
   background-color: #f38181;
@@ -220,18 +223,19 @@ span {
   color: #999999;
 }
 
-
 /* TEAM */
 
 .team {
-  margin-bottom: 80px;
+  padding-bottom: 80px;
 }
 
+.team .section-title {
+  margin-bottom: 90px;
+}
 .header-descr {
   margin: auto;
   text-align: center;
   width: 940px;
-  margin-bottom: 90px;
 }
 
 .team-list {
@@ -242,16 +246,10 @@ span {
   position: relative;
 }
 
-.image,
-.overlay {
-  transition: transform 200ms linear;
-}
-
 .overlay {
   position: absolute;
   display: block;
   background: linear-gradient(
-    90deg,
     rgba(243, 129, 129, 0.9),
     rgba(252, 227, 138, 0.9)
   );
@@ -260,13 +258,12 @@ span {
   width: 100%;
   height: 470px;
   opacity: 0;
-  z-index: 2;
+  transition: transform 200ms linear;
 }
 
 .team-member:hover .image {
   transform: translate(-10px, -10px);
   box-shadow: 10px 10px #95e1d3;
-  
 }
 
 .team-member:hover .overlay {
@@ -355,6 +352,7 @@ span {
 }
 
 .color {
+  display: inline-block;
   text-decoration: none;
   color: #f38181;
 }
