--- a/html-css/module-07/hw-07/css/style.css
+++ b/html-css/module-07/hw-07/css/style.css
@@ -132,10 +132,14 @@ input[type="radio"].visually-hidden {
 /* SERVICES */
 
 .services {
-  margin-bottom: 120px;
+  padding-bottom: 120px;
 }
 
 .section-header {
+  margin-bottom:  75px;
+}
+
+.section-title {
   margin: 0 auto 20px;
   color: #222222;
   font-family: 'Montserrat-bold';
@@ -145,7 +149,7 @@ input[type="radio"].visually-hidden {
 }
 
 .header-descr {
-  margin: 0 auto 75px;
+  margin: 0 auto;
   font-family: 'PT Sans-italic';
   color: #777777;
   font-size: 16px;
@@ -207,7 +211,7 @@ input[type="radio"].visually-hidden {
   padding: 110px 0 115px;
 }
 
-.contact-us .section-header {
+.contact-us .section-title {
   color: #ffffff;
 }
 
